<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USA Survival App</string>
    <string name="title_store">Store</string>
    <string name="title_ontheroad">On the Road</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="string_currencyconverter">Currency Converter</string>
    <string name="string_liquidconverter">Liquid Converter</string>
    <string name="string_weightconverter">Weight Converter</string>
    <string name="string_sizeconverter">Size Converter</string>
    <string name="string_size_gender">Gender</string>
    <string name="string_size_type">Type</string>
    <string name="string_size_women">women</string>
    <string name="string_size_men">men</string>
    <string name="string_size_clothes">clothes</string>
    <string name="string_size_shoes">shoes</string>
    <string name="string_size_us">US</string>
    <string name="string_size_ger">GER</string>
    <string name="string_tipcalculator">Tip Calculator</string>
    <string name="string_tips">tips</string>
    <string name="string_total">total</string>
    <string name="string_update">update currency...</string>
    <string name="string_updateerror">Error: Could not update currency!</string>
    
    <string name="string_description">The USASurvival
App is a smart, fast and simple helper for visitors of the US. The app is
separated in useful categories. The categories are divided by practical situations of the daily
life. To keep the app simple, we only support the main important cases. The app will
especially support visitors from germany and other european countries which use the Euro
as currency.</string>
    
    
    <string name="speed_converter">Speed converter</string>
    <string name="fuel_cost_calculator">Fuel cost calculator</string>
    <string name="gasstation_finder">Gasstation finder</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="sort_by">Sort By</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="distance_miles_">"Distance(miles): "</string>
    <string name="compass">Compass</string>
    <string name="loading_">loading...</string>
    <string name="where_i_am">Where i am</string>
    <string name="address">Address</string>
    <string name="station">Station</string>
    <string name="searching_gas_stations_">Searching gas-stations...</string>
    <string name="gas_station">Gas station</string>
    <string name="hey_my_current_address_is_">Hey my current Address is\n</string>
    <string name="my_address">My Address</string>
    <string name="share_it_using_">share it using...</string>
    <string name="waiting_for_location">Waiting for location</string>

</resources>