<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usasurvivalapp.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/mall" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/background_color"
        android:padding="@dimen/small_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/list_field_style"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:orientation="vertical" >

                <RelativeLayout
                    style="@style/list_field_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imageViewCurrency"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/currency" />

                    <TextView
                        style="@style/list_field_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageViewCurrency"
                        android:text="@string/string_currencyconverter"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="$"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/input_euro"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/input_dollar"
                        android:layout_alignBottom="@+id/input_dollar"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="19dp"
                        android:ems="6"
                        android:inputType="numberDecimal" >

                    </EditText>

                    <ImageView
                        android:id="@+id/imageViewStore"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_alignTop="@+id/input_dollar"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:src="@drawable/equal32" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/input_euro"
                        android:layout_alignTop="@+id/input_euro"
                        android:layout_weight="1"
                        android:text="€"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <EditText
                        android:id="@+id/input_dollar"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/textView1"
                        android:layout_marginLeft="14dp"
                        android:layout_toRightOf="@+id/textView1"
                        android:ems="6"
                        android:inputType="numberDecimal" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:orientation="vertical" >

                    <ImageButton
                        android:id="@+id/btn_update"
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:src="@drawable/update2" />

                    <ScrollView
                        android:id="@+id/ScrollView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btn_update"
                        android:layout_alignBottom="@+id/btn_update"
                        android:layout_toRightOf="@+id/btn_update" >
                    </ScrollView>

                    <TextView
                        android:id="@+id/text_currencydate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btn_update"
                        android:layout_alignBottom="@+id/btn_update"
                        android:layout_toRightOf="@+id/btn_update"
                        android:text="01/01/1901"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/text_currencyactual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/text_currencydate"
                        android:layout_alignBottom="@+id/text_currencydate"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/text_currencydate"
                        android:text="$ 1 = 0.78€"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/list_field_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <RelativeLayout
                    style="@style/list_field_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewLiquid"
                        android:layout_width="36dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/pitcher" />

                    <TextView
                        style="@style/list_field_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageViewLiquid"
                        android:text="@string/string_liquidconverter" />
                </RelativeLayout>

                <LinearLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Spinner
                        android:id="@+id/spinner_from"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/input_from" />

                    <EditText
                        android:id="@+id/input_from"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Spinner
                        android:id="@+id/spinner_to"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/ImageView01" />

                    <TextView
                        android:id="@+id/text_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/list_field_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <RelativeLayout
                    style="@style/list_field_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageWeight"
                        android:layout_width="36dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/weight" />

                    <TextView
                        style="@style/list_field_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageWeight"
                        android:text="@string/string_weightconverter" />
                </RelativeLayout>

                <LinearLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/spinner_fromW"
                        android:layout_width="104dp"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/input_fromW"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/spinner_toW"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_toW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/list_field_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical" >

                <RelativeLayout
                    style="@style/list_field_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imageViewSize"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/size" />

                    <TextView
                        style="@style/list_field_title_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageViewSize"
                         android:text="@string/string_sizeconverter"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/relativeLayout1"
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="151.25"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:text="@string/string_size_gender" />

                    <RadioGroup
                        android:id="@+id/radioGroup_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_womensizes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                           android:text="@string/string_size_women"  />

                        <RadioButton
                            android:id="@+id/radio_mensizes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_size_men"  />
                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_size_type"  />

                    <RadioGroup
                        android:id="@+id/radioGroup_clothtype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_clothes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/string_size_clothes"  />

                        <RadioButton
                            android:id="@+id/radio_shoes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_size_shoes"  />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    style="@style/list_field_item_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="11"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_size_us"  />

                    <Spinner
                        android:id="@+id/spinner_ussizes"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_size_ger"  />

                    <Spinner
                        android:id="@+id/spinner_gersizes"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>